[project]
name = "reproducibility-auditor"
version = "0.1.0"
description = "OpenEnv RL Reproducibility Auditor"
requires-python = ">=3.9"

dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "gymnasium==0.29.1",
    "requests==2.31.0",
    "openai==1.30.1",
    "python-dotenv==1.0.1",
]